# arch

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Dockerfile.migration  README.md  docker-compose.yml  go.mod  go.sum  justfile  load-test.go  sqlc.yaml
.github/workflows/: docker-build-push.yml  gitops.yml
argocd/: kustomization.yaml
argocd/applications/: arch-app.yaml  kustomization.yaml
argocd/observability/: kustomization.yaml
argocd/storage/: kustomization.yaml
argos/applications/: arch-app.yaml  kustomization.yaml  rpc-client-app.yaml  rpc-migration-app.yaml  rpc-server-app.yaml
argos/bootstrap/: namespace.yaml
argos/observability/: kustomization.yaml
argos/service-mesh/: kustomization.yaml
argos/storage/: kustomization.yaml
client/: .dockerignore  Dockerfile  pyproject.toml  pyrightconfig.json
client/app/: __init__.py  main.py
client/app/api/: __init__.py  health.py
client/app/api/v1/: __init__.py  users.py
client/app/core/: __init__.py  config.py  exceptions.py  logging.py  tracing.py
client/app/grpc_client/: __init__.py  client.py
client/app/models/: __init__.py  sys.py  user.py
client/app/services/: __init__.py  user_service.py
client/proto/: __init__.py  __init__.pyi  user_pb2.py  user_pb2.pyi  user_pb2_grpc.py  user_pb2_grpc.pyi
cmd/server/: main.go
iac/grafana/: .terraform.lock.hcl  data.tf  istio.tf  main.tf  provider.tf
iac/kibana/: kibana.iac.json  main.py
infra/: kustomization.yaml  namespace.yaml
infra/argocd/: kustomization.yaml
infra/bootstrap/: kustomization.yaml  namespace.yaml
infra/cert-manager/: cert-manager-values.yaml  cert-manager.yaml
infra/cloudnative-pg/: cloudnative-pg.yaml  kustomization.yaml
infra/eck/: eck-operator-values.yaml  eck-operator.yaml  eck-stack-values.yaml  eck-stack.yaml  kustomization.yaml
infra/efk/: create-index-template.sh  eck-elasticsearch.yaml  eck-kibana.yaml  eck-operator.yaml  eck-stack.yaml  fluent-bit-values.yaml  fluent-bit.yaml  kustomization.yaml
infra/grafana/: grafana-values.yaml  grafana.yaml  kustomization.yaml
infra/istio/: base.yaml  ingress-gateway.yaml  istio-base.yaml  istiod-values.yaml  istiod.yaml  kiali.yaml
infra/istio-config/: app.yaml  telemetry.yaml
infra/jaeger/: app.yaml  jaeger.yaml  kustomization.yaml
infra/kiali/: kiali-operator-values.yaml  kiali-operator.yaml
infra/opentelemetry/: opentelemetry-operator-values.yaml  opentelemetry-operator.yaml
infra/postgres/: app.yaml  deploy.yaml  kustomization.yaml  pg-cluster.yaml  secret.yaml
infra/prometheus/: kustomization.yaml  prometheus-values.yaml  promethues.yaml
infra/valkey/: app.yaml  kustomization.yaml  mesh.yaml  tmp.yaml
internal/cache/: cache.go  traced.go
internal/config/: config.go
internal/database/: connection.go
internal/logging/: schema.go
internal/models/: user.go
internal/repository/: user.go
internal/server/: cached_user.go  test_server.go  user.go
k8s/: README.md  deploy.sh
pkg/pb/: user.pb.go  (+1 more)
proto/: user.proto
rpc-client/: Dockerfile  pyproject.toml
rpc-client/app/: main.py
rpc-client/app/api/: __init__.py  health.py  test.py
rpc-client/app/api/v1/: __init__.py
rpc-client/app/core/: config.py  exceptions.py  logging.py
rpc-client/app/grpc_client/: __init__.py  client.py
rpc-client/app/services/: test_service.py  user_service.py
rpc-client/proto/: user_pb2.pyi  user_pb2_grpc.py
rpc-server/: Dockerfile  Dockerfile.migration  go.mod  go.sum
scripts/: generate_proto.sh  wait_for_postgres.sh
(+168 files in other folders)
